--- a/ShWebsitecss.css
+++ b/ShWebsitecss.css
@@ -20,6 +20,17 @@ table {
     color: #ddd;
     line-height: 1.5;
   }
+  td:first-child {
+    width: 1%;
+    white-space: nowrap;
+}
+td:nth-child(2){
+  width: 1%;
+}
+td:nth-child(3){
+  width: 1%;
+  white-space: nowrap;
+}
   a{
     color:gold;
   }
