--- a/ShWebsitecss.css
+++ b/ShWebsitecss.css
@@ -36,9 +36,17 @@ td:nth-child(3){
     color:#d64230;
   }
 
-  ::-webkit-scrollbar {
-    display: none;
+ /* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
 }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
+
 
   table td,
   table th {
