--- a/ShWebsitecss.css
+++ b/ShWebsitecss.css
@@ -44,7 +44,7 @@ td:nth-child(3){
 /* Hide scrollbar for IE, Edge and Firefox */
 html {
   -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  scrollbar-width: thin;  /* Firefox */
 } 
 
 
